# prepatec-soccer-analytics

./: .conversion_cache.json  .copilotignore  .copilotrc.json  .github-copilot-instructions.md  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  EVALUACION.md  INSTALLATION.md  LIBRARY_README.md  MANIFIESTO-IA.md  Makefile  PLAN-DE-EVALUACION.md  README.md  RESUMEN-ESTRUCTURA-EVALUACION.md  TEMARIO.md  install_dependencies.py  programa.md  pyproject.toml  requirements.txt  setup.py  tec-data-science-topic.code-workspace
.ai/: AI-CONTEXT.md  README.md  copilot-instructions.md
.claude/: CLAUDE.md  README.md
.claude/commands/: commit.md
.github/: .copilotignore  .copilotrc.json  copilot-instructions.md  copilot-workspace.md
.github/instructions/: estilos.instructions.md  general.instructions.md  pedagogicas.instructions.md
.github/prompts/: commit.prompt.md  create-new-version.prompt.md  jupyter-to-marp-presentacion.prompt.md  release-new-version.prompt.md  tag-new-version.prompt.md  tag.prompt.md  update-documentation.prompt.md  update-repo-version.prompt.md
bloque-0/: README.md
bloque-1/: README.md
bloque-1/semana-1/: configuracion-fundamentos.ipynb  introduccion-exploracion.ipynb
bloque-1/semana-2/: estructuras-control.ipynb  tipos-datos-futbol.ipynb
bloque-1/semana-3/: funciones-modulos.ipynb
bloque-1/semana-4/: pandas-numpy-introduccion.ipynb
bloque-1/semana-5/: visualizacion-basica.ipynb
bloque-2/: README.md
bloque-2/evaluacion/: README.md
bloque-2/semana-1/: introduccion-exploracion.ipynb  introduccion-exploracion.md
bloque-2/semana-10/: analisis-interpretacion.ipynb
bloque-2/semana-2/: tipos-datos-futbol.ipynb
bloque-2/semana-3/: estadistica-descriptiva.ipynb
bloque-2/semana-4/: visualizacion-datos.ipynb
bloque-2/semana-5/: analisis-interpretacion.ipynb
bloque-2/semana-7/: tipos-datos-futbol.ipynb
bloque-2/semana-8/: estadistica-descriptiva.ipynb
bloque-3/: README.md
bloque-3/semana-1/: modelado-predictivo-introduccion.ipynb
bloque-3/semana-12/: modelos-avanzados-clasificacion.ipynb
bloque-3/semana-13/: metricas-avanzadas-evaluacion.ipynb
bloque-3/semana-14/: feature-engineering-optimizacion.ipynb
bloque-3/semana-15/: proyecto-final-integrador.ipynb
bloque-3/semana-2/: modelos-avanzados-clasificacion.ipynb
bloque-3/semana-3/: metricas-avanzadas-evaluacion.ipynb
bloque-3/semana-4/: feature-engineering-optimizacion.ipynb
bloque-3/semana-5/: proyecto-final-integrador.ipynb
contenido/bloque-1/: README.md
contenido/bloque-2/: README.md
contenido/bloque-3/: README.md
herramientas/notebook-to-pdf/: INSTALLATION.md  Makefile  README.md  SUMMARY.md  TECHNICAL_DETAILS.md  USAGE_GUIDE.md  convert.py  convert.sh  smart_convert.py
herramientas/py-to-marp/: Makefile  README.md  configs.py  convert.py  install.sh  py_to_marp.py
herramientas/qti_converter/: __init__.py  core.py  format_converter.py  utils.py
herramientas/txt-to-qti/: README.md  convert.py  csv_to_kansas_qti.py  smart_convert.py  txt_to_csv_direct.py
material-didactico/: README.md
material-didactico/bloque-1/: README.md
material-didactico/bloque-2/: README.md
material-didactico/bloque-3/: README.md
material-didactico/referencias/: guia-instalacion.md
referencias/: Syllabus_202513_TAD_TYO.txt  bibliografia-recursos.md  guia-instalacion.md
temario/: Syllabus_CDF_Prepa_202513.docx  Syllabus_CDF_Prepa_202513.md  Syllabus_CDF_Prepa_2025A.txt
txt_to_qti.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
txttoqti/: cli.py  converter.py  exceptions.py  parser.py  qti_generator.py  smart_converter.py  utils.py  validator.py
txttoqti/tests/: __init__.py  test_core.py
(+113 files in other folders)
