[project]
name = "prepatec-soccer-analytics"
version = "5.1.0"
description = "Curso de Ciencia de Datos aplicada al Fútbol para estudiantes de preparatoria usando metodología socrática"
authors = [
    {name = "Juliho C.C.", email = "julihocc@yahoo.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "jupyter>=1.0.0",
    "txttoqti",
]
keywords = ["ciencia-datos", "futbol", "educacion", "preparatoria", "python", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/julihocc/tec-data-science-topic"
"Repository" = "https://github.com/julihocc/tec-data-science-topic"
"Documentation" = "https://github.com/julihocc/tec-data-science-topic/blob/main/README.md"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["contenido"]
include-package-data = true

[tool.uv.sources]
txttoqti = { git = "https://github.com/julihocc/txttoqti.git", rev = "main" }
