[project]
name = "ciencia-de-datos-para-el-analisis-deportivo"
version = "0.1.0"
description = "Repositorio para el curso de Ciencia de Datos para el Análisis Deportivo"
readme = "README.md"
authors = [
    { name = "Juliho Castillo Colmenares", email = "julihocc@tec.mx" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.1",
]
